Working with data

--- a/lesson-2-1/index.html
+++ b/lesson-2-1/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <div id="app">
-        <p>Hey</p>
+        <p>{{firstName}}</p>
+        <p>{{lastName}}</p>
+
     </div>
 
     <script src="https://unpkg.com/vue@3"></script>
