Multiple Vue instances

--- a/lesson-2-1/index.html
+++ b/lesson-2-1/index.html
@@ -6,10 +6,17 @@
   </head>
   <body>
     <div id="app">
-        <p>{{firstName}}</p>
-        <p>{{lastName}}</p>
+        {{firstName}}
+        {{lastName}}
 
     </div>
+
+    <div id="app2">
+      {{firstName}}
+      {{lastName}}
+
+    </div>
+
 
     <script src="https://unpkg.com/vue@3"></script>
     <script src="app.js"></script>
