--- a/lesson-2-1/index.html
+++ b/lesson-2-1/index.html
@@ -6,16 +6,14 @@
   </head>
   <body>
     <div id="app">
-        {{firstName}}
-        {{lastName}}
-
+      {{fullName()}}
     </div>
 
-    <div id="app2">
+    <!-- <div id="app2">
       {{firstName}}
       {{lastName}}
 
-    </div>
+    </div> -->
 
 
     <script src="https://unpkg.com/vue@3"></script>
