--- a/lesson-2-1/index.html
+++ b/lesson-2-1/index.html
@@ -5,8 +5,16 @@
     <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
   <body>
-    <div id="app">
-      {{fullName()}}
+    <div id="app" v-cloak >
+      <p>{{fullName()}}</p>
+      <hr />
+
+      <label>First Name</label>
+      <input type="text" v-model="firstName">
+
+      <label>Last Name</label>
+      <input type="text" v-model="lastName">
+
     </div>
 
     <!-- <div id="app2">
